--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       color: #f4f4f4;
     }
     header {
-      background-image: url('header-image.jpg'); /* Replace with actual image path */
+      background-image: url('skyline.jpg'); /* Replace with actual image path */
       background-size: cover;
       background-position: center;
       padding: 6rem 2rem;
