--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       color: #f4f4f4;
     }
     header {
-      background-image: url('skyline.jpg'); /* Replace with actual image path */
+      background-image: url('skyline.jpg');
       background-size: cover;
       background-position: center;
       padding: 6rem 2rem;
@@ -64,6 +64,24 @@
       font-size: 0.9rem;
       color: #888;
     }
+    .ticker {
+      background-color: #ff3c3c;
+      color: #fff;
+      font-weight: bold;
+      padding: 0.5rem 1rem;
+      text-align: center;
+      animation: ticker 10s linear infinite;
+    }
+    @keyframes ticker {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
+    .live-box {
+      border-left: 4px solid #f00;
+      padding-left: 1rem;
+      margin-top: 1rem;
+      color: #ff8080;
+    }
   </style>
 </head>
 <body>
@@ -72,11 +90,12 @@
     <p>Reporting news in progress across all of the Greater Los Angeles area</p>
   </header>
 
+  <div class="ticker">BREAKING: Scanner traffic reports a pursuit in progress in South LA. Updates incoming.</div>
+
   <nav>
     <a href="#about">About</a>
     <a href="#reports">Live Reports</a>
     <a href="#social">Social</a>
-    <a href="#contact">Contact</a>
   </nav>
 
   <section id="about">
@@ -90,6 +109,12 @@
     <div class="card">
       <h2>Live Reports</h2>
       <p>Our most recent updates appear on our <a href="https://twitter.com/LosAngeles_Scan" target="_blank">Twitter feed</a>. Bookmark this site for official reports once confirmed. All updates reflect scanner radio traffic and may evolve as new details emerge.</p>
+      <div class="live-box">
+        <strong>🚨 Ongoing:</strong> Structure fire reported near Fairfax & Pico. LAFD en route. Expect closures.
+      </div>
+      <div class="live-box">
+        <strong>🚓 Just In:</strong> Hit-and-run incident in Echo Park. Suspect vehicle: dark sedan, last seen NB on Glendale Blvd.
+      </div>
     </div>
   </section>
 
@@ -103,15 +128,9 @@
     </div>
   </section>
 
-  <section id="contact">
-    <div class="card">
-      <h2>Contact</h2>
-      <p>For media inquiries or to provide additional info about an incident, please email <a href="mailto:contact@losangelesscanner.com">contact@losangelesscanner.com</a>.</p>
-    </div>
-  </section>
-
   <footer>
     <p>&copy; 2025 Los Angeles Scanner. All rights reserved. | Reporting News in Progress</p>
   </footer>
 </body>
 </html>
+
