--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <p class="glow">Reporting news in progress across all of the Greater Los Angeles area</p>
   </header>
 
-  <div class="ticker">🚨 BREAKING: Live updates now powered by @LosAngeles_Scan — stay tuned for real-time alerts 🚓</div>
+  <div class="ticker">🚨 BREAKING: Man shot at 73rd and Broadway in South LA 🚓</div>
 
   <nav>
     <a href="#about">About</a>
@@ -160,4 +160,5 @@
   </footer>
 </body>
 </html>
+
 
