--- a/index.html
+++ b/index.html
@@ -137,10 +137,8 @@
   <section id="reports">
     <div class="card">
       <h2>Live Reports</h2>
-      <p>Our most recent updates appear below, directly from our <a href="https://twitter.com/LosAngeles_Scan" target="_blank">Twitter feed</a>.</p>
-      <blockquote class="twitter-tweet" data-theme="dark">
-        <a href="https://twitter.com/LosAngeles_Scan"></a>
-      </blockquote>
+      <p>Follow the latest real-time incident updates directly below from our Twitter timeline:</p>
+      <a class="twitter-timeline" data-theme="dark" data-height="600" data-tweet-limit="3" href="https://twitter.com/LosAngeles_Scan?ref_src=twsrc%5Etfw">Tweets by LosAngeles_Scan</a>
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
   </section>
@@ -160,5 +158,4 @@
   </footer>
 </body>
 </html>
-
 
