--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
     <a href="#about">About</a>
     <a href="#reports">Live Reports</a>
     <a href="#social">Social</a>
+    <a href="#archive">Archive</a>
+    <a href="#map">Map</a>
+    <a href="#scanner">Live Audio</a>
   </nav>
 
   <section id="about">
@@ -140,6 +143,33 @@
       <p>Follow the latest real-time incident updates directly below from our Twitter timeline:</p>
       <a class="twitter-timeline" data-theme="dark" data-height="600" data-tweet-limit="3" href="https://twitter.com/LosAngeles_Scan?ref_src=twsrc%5Etfw">Tweets by LosAngeles_Scan</a>
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+  </section>
+
+  <section id="map">
+    <div class="card">
+      <h2>Incident Map</h2>
+      <iframe src="https://www.google.com/maps/d/embed?mid=YOUR_CUSTOM_MAP_ID" width="100%" height="400" style="border:0; border-radius: 12px;"></iframe>
+    </div>
+  </section>
+
+  <section id="scanner">
+    <div class="card">
+      <h2>Live Audio Scanner</h2>
+      <iframe width="100%" height="120" scrolling="no" frameborder="no" allow="autoplay"
+      src="https://broadcastify.cdnstream1.com/30002">
+      </iframe>
+    </div>
+  </section>
+
+  <section id="archive">
+    <div class="card">
+      <h2>Reported Incidents</h2>
+      <ul>
+        <li><strong>June 6, 2025:</strong> Man shot at 73rd and Broadway, South LA</li>
+        <li><strong>June 5, 2025:</strong> Pursuit ends in crash on La Cienega</li>
+        <li><strong>June 4, 2025:</strong> Armed robbery near Venice and Centinela</li>
+      </ul>
     </div>
   </section>
 
